--- a/.gitignore
+++ b/.gitignore
@@ -28,5 +28,24 @@ go.work.sum
 .env
 
 # Editor/IDE
-# .idea/
-# .vscode/
+.idea/
+.vscode/
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+lerna-error.log*
+lerna-debug.log*
+
+# Temporary files
+*.tmp
+*.temp
+
+# DB files
+*.db
+*.sqlite
+*.sqlite3
